welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:14: error: not found: value setColorBrosse
  setColorBrosse(b)
  ^PatternPicture:38: error: not found: value setColorBrosse
  setColorBrosse(c);
  ^